tests/codegen/errors/reader/collections-refinements/atom.reader.error.reader.array.size.not.divisible/reader-array-size-not-divisible.mon
;; TEST-ID: tests.codegen.reader-error.reader-array-size-not-divisible
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: expected-fail-compiled
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/collections-refinements
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: buffer size
;; TEST-ATOM: atom.reader.error.reader.array.size.not.divisible
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.array.size.not.divisible
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: buffer size
;; TEST-READER-PATH: reader.c:6218 parser.array
;; TEST-CODEGEN-PATH: diagnostic.parser.array
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:6218 buffer size
;; TEST-USES-ATOM: atom.reader.error.reader.array.size.not.divisible
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.array
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/collections-refinements/atom.reader.error.reader.array.size.not.divisible
;; TEST-MENU-PATH: codegen/errors/reader/collections-refinements/atom.reader.error.reader.array.size.not.divisible
;; TEST-ATOM-LEAF: atom.reader.error.reader.array.size.not.divisible
;; TEST-CLI-TARGET: codegen errors reader collections-refinements

(module Main)
(show [U16 3 1 2 3])
